[package]
name = "pgbook"
version = "0.1.0"
edition = "2021"
authors = ["todd brooks <todd.brooks@thecodefoundry.com>"]
description = "A PostgreSQL database schema and data dictionary generator"
readme = "README.md"
repository = "https://github.com:toddbrooks/pgbook.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
