[package]
name = "pgbook"
version = "0.0.1"
edition = "2021"
authors = ["todd brooks <todd.brooks@thecodefoundry.com>"]
description = "A PostgreSQL database schema and data dictionary generator"
repository = "https://github.com/toddbrooks/pgbook"
readme = "README.md"
license = "UNLICENSED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive", "cargo"] }
postgres = "0.19.5"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
